--- a/Robocol/testapp/src/app/auth/auth-login/auth-login.component.html
+++ b/Robocol/testapp/src/app/auth/auth-login/auth-login.component.html
@@ -1,40 +1,46 @@
-<div cass="container-fluid">
-  <div class="card-group">
-    <div class="card">
-      <img src="././assets/Rover.png" class="card-img-top" id="imgRover" alt="Rover">
-      <div class="card-body">
-        <h5 class="card-title">Rover</h5>
+<div class="container-fluid" id="projects_container">
+  <span>
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+  </span>
+  <div class="card-group mb-3">
+    <div class="card border-warning" id="rover_card">
+      <img src="././assets/Home/Rover.png" class="card-img-top" id="imgRover" alt="Rover">
+      <div class="card-body text-center">
+        <h5 class="card-title">ROVER</h5>
         <p class="card-text">
-          <button type="button" class="btn btn-dark"
-          (click)="login('ROVER')">Entra Aquí</button>
+          <button type="button" class="btn btn-outline-warning" (click)="login('ROVER')">Entra Aquí</button>
         </p>
-        <p class="card-text"><small class="text-muted">Activo</small></p>
+        <p class="card-text"><small class="text-light">Activo</small></p>
       </div>
     </div>
-    <div class="card">
-      <img src="././assets/Submarino.png" class="card-img-top" id="imgSubmarino" alt="Submarino">
-      <div class="card-body">
-        <h5 class="card-title">Submarino</h5>
+    <div class="card border-warning" id ="submarine_card">
+      <img src="././assets/Home/Submarino.png" class="card-img-top" id="imgSubmarino" alt="Submarino">
+      <div class="card-body text-center">
+        <h5 class="card-title">SUBMARINO</h5>
         <p class="card-text">
-          <button type="button" class="btn btn-dark"
-          (click)="login('SUBMARINO')">Entra Aquí</button>
+          <button type="button" class="btn btn-outline-warning" (click)="login('SUBMARINO')">Entra Aquí</button>
         </p>
-        <p class="card-text"><small class="text-muted">Ultima vez activo hace 3 minutos</small></p>
+        <p class="card-text"><small class="text-light">Ultima vez activo hace 3 minutos</small></p>
       </div>
     </div>
-    <div class="card">
-      <img src="././assets/Lunabot.png" class="card-img-top" id="imgLunabot" alt="Lunabot">
-      <div class="card-body">
-        <h5 class="card-title">Lunabot</h5>
+    <div class="card border-warning" id="lunabot_card">
+      <img src="././assets/Home/Lunabot.png" class="card-img-top" id="imgLunabot" alt="Lunabot">
+      <div class="card-body text-center">
+        <h5 class="card-title">LUNABOT</h5>
         <p class="card-text">
-          <button type="button" class="btn btn-dark"
-          (click)="login('LUNABOT')">Entra Aquí</button>
+          <button type="button" class="btn btn-outline-warning" (click)="login('LUNABOT')">Entra Aquí</button>
         </p>
-        <p class="card-text"><small class="text-muted">Ultima vez activo hace 3 minutos</small></p>
+        <p class="card-text"><small class="text-light">Ultima vez activo hace 3 minutos</small></p>
       </div>
     </div>
   </div>
-
-
+  <span>
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+  </span>
+  
 </div>
-
