--- a/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.css
+++ b/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.css
@@ -23,7 +23,13 @@ label
 }
 .categories
 {
+	color: white;
 	/* position: relative; */
 	/* top: 50px; */
 	/* right: 10px */
+}
+
+pre
+{
+	color: white;
 }
