--- a/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card-transparent">
 	<div class="card-body">
 		<div class="row">
 			<h5 class="card-title">Database analysis description</h5>
@@ -14,6 +14,18 @@
 					<pre>	Volcanic gases.</pre>
 					<pre><b>Humidity:</b></pre>
 					<pre>	Perhumid.</pre>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card-transparent">
+					<div class="card-body">
+						<div class="row">
+								<h5 class="card-title">Graphs</h5>
+						</div>
+						<!-- <div class="row">
+								<img src="../../../assets/pirita.jpg" alt="Rocks" width="150px">
+						</div> -->
+					</div>
 				</div>
 			</div>
 		</div>
