--- a/Robocol/testapp/src/app/rover/sensorica/drilling/drilling.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/drilling/drilling.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card-transparent">
 	<div class="card-body">
 		<div class="row">
 			<div class="col">
@@ -8,11 +8,21 @@
 		<div class="row">
 			<div class="col">
 				<div class="row">
-					<div class="input-group mb-3">
-						<div class="input-group-prepend">
-							<span class="input-group-text" id="basic-addon3">Depth</span>
+					<div class="col">
+						<div class="input-group mb-3">
+							<div class="input-group-prepend">
+								<span class="input-group-text" id="basic-addon3">Depth</span>
+							</div>
+							<input disabled type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
 						</div>
-						<input disabled type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+					</div>
+					<div class="col">
+						<div class="input-group mb-3">
+							<div class="input-group-prepend">
+								<span class="input-group-text" id="basic-addon3">Force</span>
+							</div>
+							<input disabled type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+						</div>
 					</div>
 				</div>
 				<button type="button" class="btn btn-dark">Drill!</button>
