--- a/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.html
@@ -1,76 +1,304 @@
-<div class="container">
-	<div class="row">
-		<div class="col">
-			<h2>EVA</h2>
+<div id="EVA">
+	<!-- Sample 1 -->
+	<div class="card-transparent">
+		<div class="card-header" id="headingOne">
+			<h5 class="mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+					Sample 1
+				</button>
+			</h5>
+		</div>
+		<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+			<div class="card-body">
+				<div id="Sample 1">
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseSample1_1" aria-expanded="true" aria-controls="collapseOne">
+									Sample 1.1
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 1.1
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 1.2
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 1.2
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 1.3
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 1.3
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 1.4
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 1.4
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 1.5
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 1.5
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 1.6
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 1.6
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col">
-			<!-- <table id="EVA_table"> -->
-			<table id="table">
-				<!-- <thead> -->
-					<tr>
-						<!-- <th scope="col">#</th>
-						<th scope="col">First</th>
-						<th scope="col">Last</th>
-						<th scope="col">Handle</th> -->
-						<!-- <th rowspan="4">TRASH</th> -->
-						<th></th>
-						<th colspan="3" id="EVA_pos">EVA Actual Position</th>
-						<th colspan="3"></th>
-						<th colspan="3"></th>
-					</tr>
-				<!-- </thead> -->
-				<tbody>
-					<!-- <tr>
-						<th scope="row">1</th>
-						<td><img src="../../../assets/pirita.jpg" alt="Rocks" width="80px"></td>
-						<td><input type=submit value="3 - Full"></td>
-						<td><input type=submit value="5 - Full"></td>
-					</tr> -->
-					<tr>
-						<th rowspan="4">TRASH</th>
-					</tr>
-					<tr>
-						<th id="EVA_1_1"><img src="../../../assets/pirita.jpg" alt="Rocks" width="80px"></th>
-						<!-- <th id="EVA_1_1">
-							<div class="container">
-								<img src="../../../assets/pirita.jpg" alt="Rocks">
-								<button class="btn">Button</button>
-							</div>
-						</th> -->
-						<th id="EVA_1_3"><input type=submit value="3 - Full"></th>
-						<th id="EVA_1_5"><input type=submit value="5 - Full"></th>
-						<th id="EVA_2_1"><input type=submit value="1 - Empty"></th>
-						<th id="EVA_2_3"><input type=submit value="3 - Empty"></th>
-						<th id="EVA_2_5"><input type=submit value="5 - Empty"></th>
-						<th id="EVA_3_1"><input type=submit value="1 - Empty"></th>
-						<th id="EVA_3_3"><input type=submit value="3 - Empty"></th>
-						<th id="EVA_3_5"><input type=submit value="5 - Empty"></th>
-					</tr>
-					<tr>
-						<th id="EVA_1_2"><input type=submit value="2 - Full"></th>
-						<th id="EVA_1_4"><input type=submit value="4 - Full"></th>
-						<th id="EVA_1_6"><input type=submit value="5 - Full"></th>
-						<th id="EVA_2_2"><input type=submit value="2 - Empty"></th>
-						<th id="EVA_2_4"><input type=submit value="4 - Empty"></th>
-						<th id="EVA_2_6"><input type=submit value="6 - Empty"></th>
-						<th id="EVA_3_2"><input type=submit value="2 - Empty"></th>
-						<th id="EVA_3_4"><input type=submit value="4 - Empty"></th>
-						<th id="EVA_3_6"><input type=submit value="6 - Empty"></th>
-					</tr>
-					<tr>
-						<th colspan="3">Sample 1</th>
-						<th colspan="3">Sample 2</th>
-						<th colspan="3">Sample 3</th>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-		<!-- <div class="col">
-			<div id="sample_img">
 
+	<!-- Sample 2 -->
+	<div class="card">
+		<div class="card-header" id="headingOne">
+			<h5 class="mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+					Sample 1
+				</button>
+			</h5>
+		</div>
+		<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+			<div class="card-body">
+				<div id="Sample 1">
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 1.1
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 1.1
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 1.2
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 1.2
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 1.3
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 1.3
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 1.4
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 1.4
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 1.5
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 1.5
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 1.6
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 1.6
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
-		</div> -->
+		</div>
+	</div>
+
+	<!-- Sample 3 -->
+	<div class="card">
+		<div class="card-header" id="headingOne">
+			<h5 class="mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+					Sample 3
+				</button>
+			</h5>
+		</div>
+		<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+			<div class="card-body">
+				<div id="Sample 1">
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 3.1
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 3.1
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 3.2
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 3.2
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 3.3
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 3.3
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 3.4
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 3.4
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 3.5
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 3.5
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header" id="headingOne">
+							<h5 class="mb-0">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									Sample 3.6
+								</button>
+							</h5>
+						</div>
+						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+							<div class="card-body">
+								Info 3.6
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
