--- a/Robocol/testapp/src/app/rover/sensorica/live/live.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/live/live.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-	<div class="card-body">
+<div class="card-transparent bg-transparent">
+	<div class="card-body bg-black">
 		<div class="row">
 			<div class="col">
 				<h2 class="card-title">Live Stream!</h2>
@@ -7,13 +7,23 @@
 		</div>
 		<div class="row">
 			<div class="col">
+				<img class="card-img-top bg-black" src="../../../assets/countdown.gif" alt="Rocks" width="250px" >
+			</div>
+			<div class="col">
 				<img class="card-img-top" src="../../../assets/countdown.gif" alt="Rocks" width="250px" >
 			</div>
 		</div>
 		<div class="row">
-			<button type="button" class="btn btn-primary">Pause</button>
-			<button type="button" class="btn btn-secondary">Photo!</button>
-			<button type="button" class="btn btn-danger">Record</button>
+			<div class="col">
+				<button type="button" class="btn btn-warning">Pause</button>
+				<button type="button" class="btn btn-secondary">Photo!</button>
+				<button type="button" class="btn btn-danger">Record</button>
+			</div>
+			<div class="col">
+				<button type="button" class="btn btn-warning">Pause</button>
+				<button type="button" class="btn btn-secondary">Photo!</button>
+				<button type="button" class="btn btn-danger">Record</button>
+			</div>
 		</div>
 	</div>
 </div>
