--- a/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
@@ -1,36 +1,47 @@
 <div class="row justify-content-center" style="margin-top: 15px">
-   <div class="col-md-6 col-lg-4 text-center justify-content-center">
-      <div style="margin-left: 15px; margin-right: 15px; padding-right: 0px; padding-left: 0px;">
-         <app-brazo-coordenadas></app-brazo-coordenadas>
+   <div class="col-md-6 col-lg-6 text-center justify-content-center">
+      <div class="card text-center border-warning" style="background-color: transparent; margin-bottom: 30px;">
+         <div class="card-header border-warning text-warning">
+            Cámaras
+         </div>
+         <div class="card-body border-warning">
+            <app-live></app-live>
+         </div>
+      </div>
+      <div class="card text-center border-warning" style="background-color: transparent; margin-bottom: 30px;">
+         <div class="card-header border-warning text-warning">
+            Operation analisis - Safety level
+         </div>
+         <div class="card-body border-warning">
+            <app-analisis-operacion></app-analisis-operacion>
+         </div>
       </div>
    </div>
-   <div class="col-md-6 col-lg-3 justify-content-center text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px;">
-      <img style="width: 270px" src="../../../assets/arm_labels.png" alt="Brazo">
-   </div>
-   <div class="col-lg-5 justify-content-center text-center">
-      <div id="accordion" role="tablist" aria-multiselectable="true">
-      	<div class="card">
-      		<div class="card-header" role="tab" id="headerInversa">
-      			<h5 class="mb-1">
-      				<a href="#colapsable1" data-parent="#accordion" class="btn btn-primary btn-block" data-toggle="collapse" aria-expanded="true" aria-controls="colapsable1">Cinemática inversa</a>
-      			</h5>
-      		</div>
-      		<div id="colapsable1" class="collapse" role="tabpanel" aria-labelledby="headerInversa">
-      			<div class="card-block" style="margin-top: 7px; margin-bottom: 7px;">
-      				<app-brazo-cinematica-inversa></app-brazo-cinematica-inversa>
-      			</div>
-      		</div>
-      		<div class="card-header" role="tab" id="headerDirecta">
-      			<h5 class="mb-1">
-      				<a href="#colapsable2" data-parent="#accordion" class="btn btn-primary btn-block" data-toggle="collapse" aria-expanded="true" aria-controls="colapsable1">Cinemática directa</a>
-      			</h5>
-      		</div>
-      		<div id="colapsable2" class="collapse" role="tabpanel" aria-labelledby="headerDirecta">
-      			<div class="card-block" style="margin-top: 7px; margin-bottom: 7px;">
-      				<app-brazo-cinematica-directa></app-brazo-cinematica-directa>
-      			</div>
-      		</div>
-      	</div>
+   <div class="col-md-6 col-lg-6 justify-content-center text-center">
+      <div class="card text-center border-warning" style="background-color: transparent; margin-bottom: 30px;">
+         <div class="card-header border-warning text-warning">
+            <button class="btn btn-outline-warning" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="inversa directa">Cinemática directa/inversa</button>
+         </div>
+         <div class="card-body border-warning">
+            <div class="col">
+               <div class="collapse multi-collapse show" id="inversa">
+                  <app-brazo-cinematica-inversa></app-brazo-cinematica-inversa>
+               </div>
+            </div>
+            <div class="col">
+               <div class="collapse multi-collapse" id="directa">
+                  <app-brazo-cinematica-directa></app-brazo-cinematica-directa>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="card text-center border-warning" style="background-color: transparent; margin-bottom: 30px;">
+         <div class="card-header border-warning text-warning">
+            Operación por coordenadas
+         </div>
+         <div class="card-body border-warning">
+            <app-brazo-coordenadas></app-brazo-coordenadas>
+         </div>
       </div>
    </div>
 </div>
