Sensors tab changes. ROS and sockets configuration in backend. Design changes.

--- a/Robocol/testapp/src/app/auth/auth-login/auth-login.component.html
+++ b/Robocol/testapp/src/app/auth/auth-login/auth-login.component.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="card border-warning" id="lunabot_card">
-      <img src="././assets/Home/Lunabot.png" class="card-img-top" id="imgLunabot" alt="Lunabot">
+      <img src="././assets/LUNABOT.png" class="card-img-top" id="imgLunabot" alt="Lunabot">
       <div class="card-body text-center">
         <h5 class="card-title">LUNABOT</h5>
         <p class="card-text">
