--- a/Robocol/testapp/src/app/rover/sensorica/measurements/measurements.component.css
+++ b/Robocol/testapp/src/app/rover/sensorica/measurements/measurements.component.css
@@ -2,6 +2,11 @@ label
 {
 	font-family: Helvetica;
 }
+th {
+    /* background-color: blue; */
+		font-family: Helvetica;
+    color: white;
+}
 /* Sensor measurements. */
 #sensors_measurements
 {
