--- a/Robocol/testapp/src/styles.scss
+++ b/Robocol/testapp/src/styles.scss
@@ -2,7 +2,8 @@ $theme-colors:
 (
   "primary": #e4b503,
   "warning": #e4b503,
-  "danger": #ff4136
+  "danger": #ff4136,
+  "dark": #161616
 );
 
 @import "node_modules/bootstrap/scss/bootstrap";
